ModuleObstacle implemented - now can add obstacles dinamically with collider and callback funct. Player state system on progress...

--- a/SDL Game.vcxproj.filters
+++ b/SDL Game.vcxproj.filters
@@ -14,6 +14,9 @@
     <Filter Include="Utils">
       <UniqueIdentifier>{ad89cf24-f35e-4d0c-90e5-820c054c274d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game Elements">
+      <UniqueIdentifier>{fddb5c4e-f5c9-4dbd-9e09-a73abb15b8e3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ModuleRender.h">
@@ -70,6 +73,9 @@
     <ClInclude Include="ModuleScene1_1.h">
       <Filter>Game Modules</Filter>
     </ClInclude>
+    <ClInclude Include="ModuleObstacle.h">
+      <Filter>Game Modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -115,6 +121,9 @@
       <Filter>Game Modules</Filter>
     </ClCompile>
     <ClCompile Include="ModuleScene1_1.cpp">
+      <Filter>Game Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleObstacle.cpp">
       <Filter>Game Modules</Filter>
     </ClCompile>
   </ItemGroup>
