--- a/SDL Game.vcxproj
+++ b/SDL Game.vcxproj
@@ -71,7 +71,10 @@
   <ItemGroup>
     <ClInclude Include="Animation.h" />
     <ClInclude Include="Application.h" />
+    <ClInclude Include="AttackSystem.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="HPSystem.h" />
+    <ClInclude Include="JumpSystem.h" />
     <ClInclude Include="MemLeaks.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleAudio.h" />
@@ -87,6 +90,7 @@
     <ClInclude Include="ModuleSceneSpace.h" />
     <ClInclude Include="ModuleTextures.h" />
     <ClInclude Include="ModuleWindow.h" />
+    <ClInclude Include="MovementSystem.h" />
     <ClInclude Include="Point.h" />
   </ItemGroup>
   <ItemGroup>
