--- a/SDL Game.vcxproj
+++ b/SDL Game.vcxproj
@@ -73,6 +73,7 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="CustomCounter.h" />
     <ClInclude Include="Globals.h" />
+    <ClInclude Include="HPSystem.h" />
     <ClInclude Include="MemLeaks.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleAudio.h" />
